# identicon-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  build.rs  clippy.toml  deny.toml
.github/: CODEOWNERS
.github/workflows/: audit-workflow.yml  ci-action.yml  ci-pull-request.yml  ci-workflow.yml  documentation.yml  rust.yml
examples/: export_buffer.rs  main.rs  theme.rs  webserver.rs
identicon-rs/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
identicon-rs/examples/: main.rs
identicon-rs/src/: error.rs  lib.rs
identicon-rs/tests/: version-numbers.rs
identicon-server/: Cargo.toml  Dockerfile
identicon-server/src/: main.rs
scripts/: README_TEMPLATE.md  generate-readme.sh  test-readme.sh
src/: color.rs  error.rs  grid.rs  hash.rs  lib.rs  main.rs  map_values.rs  theme.rs
src/theme/: error.rs  mod.rs
templates/: README.hbs
