[package]
name = "identicon-rs"
version = "5.0.1"
authors = ["Nia Maxwell <nia@conwaysglider.com>"]
edition = "2021"
readme = "README.md"
description = """
identicon-rs is a library built around custom generation of identicon images.
"""
documentation = "https://docs.rs/identicon-rs"
repository = "https://github.com/conways-glider/identicon-rs"
license = "MIT OR Apache-2.0"
keywords = ["image", "identicon", "avatar"]
categories = ["graphics", "multimedia::images", "value-formatting", "visualization"]

[features]
async = []

[dependencies]
image = "0.25"
sha3 = "0.10"
thiserror = "1.0"

[dev-dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
version-sync = "0.9"
